Bower included - Angular being loaded up

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -5,10 +5,11 @@
     <title>Mirror Mirror on the Wall...</title>
     <meta name="description" content="">
     <meta name="author" content="">
-
     <link href="/stylesheets/dashboard.css" rel="stylesheet">
   </head>
   <body>
       <h1>Dashboard Test</h1>
+      
+      <script src="/bower_components/angular/angular.js"></script>
   </body>
 </html>  
