Big date and time added.

--- a/public/stylesheets/dashboard.css
+++ b/public/stylesheets/dashboard.css
@@ -8,6 +8,11 @@ h1 {
 
 #current-time {
     color: white;
+    font-size: x-large;
+}
+
+#current-date {
+    font-size: xx-large;
 }
 
 #weather {
