Cut the SVG's down to what is just needed - can make them conditional and we'll be good to go!

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -15,6 +15,9 @@
         <p id="current-time">{{currentTime}}</p>
         <p id="weather">
           {{currentWeather.summary}} - {{currentWeather.apparentTemperature}} - Winds {{currentWeather.windSpeed}} mp/h
+          <div ng-include="'/templates/icons.html'">
+            
+          </div>
         </p>
       </div>
       
