--- a/public/templates/icons.html
+++ b/public/templates/icons.html
@@ -1,7 +1,7 @@
 <!--ICONS!!!!-->
 <div class="wrapper">
         <!--clear-day-->
-        <svg version="1.1"
+        <svg version="1.1" ng-show="currentWeather.icon == 'clear-day'"
             id="sun"
             class="climacon climacon_sun"
             viewBox="15 15 70 70">
@@ -39,7 +39,7 @@
         </svg>
         
         <!--clear-night-->
-        <svg version="1.1"
+        <svg version="1.1" ng-show="currentWeather.icon == 'clear-night'"
             id="moon"
             class="climacon climacon_moon"
             viewBox="15 15 70 70">
@@ -55,23 +55,32 @@
         </svg><!-- moon -->
       
         <!--snow-->
-        <svg version="1.1"
-            id="sunsetAlt"
-            class="climacon climacon_snowflake"
-            viewBox="15 15 70 70">
-          <clipPath id="snowflakeFillClip">
-            <path d="M15,15v70h70V15H15z M50,54c-2.209,0-4-1.791-4-4c0-2.208,1.791-3.999,4-3.999s3.999,1.791,3.999,3.999C53.999,52.209,52.209,54,50,54z"/>
-          </clipPath>
-          <g class="climacon_iconWrap climacon_iconWrap-snowflake">
-            <g class="climacon_componentWrap climacon_componentWrap-snowflake" clip-path="url(#snowflakeFillClip)">
-              <path class="climacon_component climacon_component-stroke climacon_component-stroke_snowflake"
-                    d="M59.659,46.733l-1.958,1.13c0.188,0.682,0.298,1.396,0.298,2.137c0,0.742-0.108,1.456-0.298,2.139l1.958,1.129c0.956,0.553,1.284,1.775,0.731,2.732c-0.553,0.956-1.774,1.284-2.731,0.73l-1.954-1.127c-1.003,1.02-2.277,1.766-3.705,2.133v2.263c0,1.104-0.896,2-2,2c-1.104,0-2-0.896-2-2v-2.263c-1.428-0.367-2.703-1.113-3.705-2.133l-1.954,1.127c-0.957,0.554-2.18,0.226-2.731-0.73c-0.553-0.957-0.225-2.18,0.731-2.732l1.958-1.129c-0.189-0.683-0.298-1.396-0.298-2.139c0-0.741,0.108-1.455,0.298-2.137l-1.958-1.13c-0.956-0.553-1.284-1.775-0.731-2.732c0.552-0.956,1.774-1.284,2.731-0.731l1.954,1.128c1.002-1.02,2.277-1.766,3.705-2.134v-2.262c0-1.104,0.896-2,2-2c1.104,0,2,0.896,2,2v2.262c1.428,0.368,2.702,1.114,3.705,2.134l1.954-1.128c0.957-0.553,2.18-0.225,2.731,0.731C60.943,44.958,60.615,46.181,59.659,46.733z"/>
+        <svg
+                  version="1.1" ng-show="currentWeather.icon == 'snow'"
+                  id="cloudSnowAlt"
+                  class="climacon climacon_cloudSnowAlt"
+                  viewBox="15 15 70 70">
+            <clipPath id="snowFillClip">
+                  <path d="M15,15v70h70V15H15z M50,65.641c-1.104,0-2-0.896-2-2c0-1.104,0.896-2,2-2c1.104,0,2,0.896,2,2S51.104,65.641,50,65.641z"/>
+            </clipPath>
+            <g class="climacon_iconWrap climacon_iconWrap-cloudSnowAlt">
+                  <g class="climacon_wrapperComponent climacon_wrapperComponent-snowAlt">
+                  <g class="climacon_component climacon_component climacon_component-snowAlt" clip-path="url(#snowFillClip)">
+                  <path
+                        class="climacon_component climacon_component-stroke climacon_component-stroke_snowAlt"
+                        d="M43.072,59.641c0.553-0.957,1.775-1.283,2.732-0.731L48,60.176v-2.535c0-1.104,0.896-2,2-2c1.104,0,2,0.896,2,2v2.535l2.195-1.268c0.957-0.551,2.18-0.225,2.73,0.732c0.553,0.957,0.225,2.18-0.73,2.731l-2.196,1.269l2.196,1.268c0.955,0.553,1.283,1.775,0.73,2.732c-0.552,0.954-1.773,1.282-2.73,0.729L52,67.104v2.535c0,1.105-0.896,2-2,2c-1.104,0-2-0.895-2-2v-2.535l-2.195,1.269c-0.957,0.553-2.18,0.226-2.732-0.729c-0.552-0.957-0.225-2.181,0.732-2.732L46,63.641l-2.195-1.268C42.848,61.82,42.521,60.598,43.072,59.641z"/>
+                  </g>
+                  </g>
+                  <g class="climacon_wrapperComponent climacon_wrapperComponent-cloud">
+                  <path
+                        class="climacon_component climacon_component-stroke climacon_component-stroke_cloud"
+                        d="M61.998,65.461v-4.082c3.447-0.891,6-4.012,6-7.738c0-4.417-3.582-7.999-7.999-7.999c-1.601,0-3.084,0.48-4.334,1.291c-1.231-5.317-5.973-9.291-11.664-9.291c-6.627,0-11.999,5.373-11.999,12c0,4.438,2.417,8.305,5.999,10.379v4.444c-5.86-2.375-9.998-8.112-9.998-14.825c0-8.835,7.162-15.999,15.998-15.999c6.004,0,11.229,3.312,13.965,8.204c0.664-0.113,1.336-0.205,2.033-0.205c6.626,0,11.998,5.373,11.998,11.998C71.997,59.586,67.671,64.506,61.998,65.461z"/>
+                  </g>
             </g>
-          </g>
-        </svg><!-- snowflake -->
+            </svg><!-- snowflake -->
         
         <!--wind-->
-        <svg version="1.1"
+        <svg version="1.1" ng-show="currentWeather.icon == 'wind'"
             id="wind"
             class="climacon climacon_wind"
             viewBox="15 15 70 70">
@@ -89,7 +98,7 @@
         
         <!--tornado-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'tornado'"
             id="tornado"
             class="climacon climacon_tornado"
             viewBox="15 15 70 70">
@@ -116,7 +125,7 @@
         
         <!--cloudy-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'cloudy'"
             id="cloud"
             class="climacon climacon_cloud"
             viewBox="15 15 70 70">
@@ -135,7 +144,7 @@
        
         <!--partly-cloudy-day-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'partly-cloudy-day'"
             id="cloudSun"
             class="climacon climacon_cloudSun"
             viewBox="15 15 70 70">
@@ -196,7 +205,7 @@
         
         <!--partly-cloudy-night-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'partly-cloudy-night'"
             id="cloudMoon"
             class="climacon climacon_cloudMoon"
             viewBox="15 15 70 70">
@@ -224,21 +233,9 @@
           </g>
         </svg><!-- cloudMoon -->
       
-        
-      
-        
-      
-        
-      
-      
-       
-      
-      
-        
-        
         <!--sleet-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'sleet'"
             id="cloudRain"
             class="climacon climacon_cloudRain"
             viewBox="15 15 70 70">
@@ -274,11 +271,9 @@
           </g>
         </svg><!-- cloudRain -->
       
-        
-        
         <!--rain-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'rain'"
             id="cloudRainAlt"
             class="climacon climacon_cloudRainAlt"
             viewBox="15 15 70 70">
@@ -306,7 +301,7 @@
       
         <!--hail-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'hail'"
             id="cloudHailAlt"
             class="climacon climacon_cloudHailAlt"
             viewBox="15 15 70 70">
@@ -346,7 +341,7 @@
         
         <!--fog-->
         <svg
-            version="1.1"
+            version="1.1" ng-show="currentWeather.icon == 'fog'"
             id="cloudFogAlt"
             class="climacon climacon_cloudFogAlt"
             viewBox="15 15 70 70">
