--- a/public/templates/icons.html
+++ b/public/templates/icons.html
@@ -1,7 +1,7 @@
 <!--ICONS!!!!-->
 <div class="wrapper">
         <!--clear-day-->
-        <svg version="1.1" ng-show="currentWeather.icon == 'clear-day'"
+        <svg version="1.1" ng-show="weather.currently.icon == 'clear-day'"
             id="sun"
             class="climacon climacon_sun"
             viewBox="15 15 70 70">
@@ -39,7 +39,7 @@
         </svg>
         
         <!--clear-night-->
-        <svg version="1.1" ng-show="currentWeather.icon == 'clear-night'"
+        <svg version="1.1" ng-show="weather.currently.icon == 'clear-night'"
             id="moon"
             class="climacon climacon_moon"
             viewBox="15 15 70 70">
@@ -56,7 +56,7 @@
       
         <!--snow-->
         <svg
-                  version="1.1" ng-show="currentWeather.icon == 'snow'"
+                  version="1.1" ng-show="weather.currently.icon == 'snow'"
                   id="cloudSnowAlt"
                   class="climacon climacon_cloudSnowAlt"
                   viewBox="15 15 70 70">
@@ -80,7 +80,7 @@
             </svg><!-- snowflake -->
         
         <!--wind-->
-        <svg version="1.1" ng-show="currentWeather.icon == 'wind'"
+        <svg version="1.1" ng-show="weather.currently.icon == 'wind'"
             id="wind"
             class="climacon climacon_wind"
             viewBox="15 15 70 70">
@@ -98,7 +98,7 @@
         
         <!--tornado-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'tornado'"
+            version="1.1" ng-show="weather.currently.icon == 'tornado'"
             id="tornado"
             class="climacon climacon_tornado"
             viewBox="15 15 70 70">
@@ -125,7 +125,7 @@
         
         <!--cloudy-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'cloudy'"
+            version="1.1" ng-show="weather.currently.icon == 'cloudy'"
             id="cloud"
             class="climacon climacon_cloud"
             viewBox="15 15 70 70">
@@ -144,7 +144,7 @@
        
         <!--partly-cloudy-day-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'partly-cloudy-day'"
+            version="1.1" ng-show="weather.currently.icon == 'partly-cloudy-day'"
             id="cloudSun"
             class="climacon climacon_cloudSun"
             viewBox="15 15 70 70">
@@ -205,7 +205,7 @@
         
         <!--partly-cloudy-night-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'partly-cloudy-night'"
+            version="1.1" ng-show="weather.currently.icon == 'partly-cloudy-night'"
             id="cloudMoon"
             class="climacon climacon_cloudMoon"
             viewBox="15 15 70 70">
@@ -235,7 +235,7 @@
       
         <!--sleet-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'sleet'"
+            version="1.1" ng-show="weather.currently.icon == 'sleet'"
             id="cloudRain"
             class="climacon climacon_cloudRain"
             viewBox="15 15 70 70">
@@ -273,7 +273,7 @@
       
         <!--rain-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'rain'"
+            version="1.1" ng-show="weather.currently.icon == 'rain'"
             id="cloudRainAlt"
             class="climacon climacon_cloudRainAlt"
             viewBox="15 15 70 70">
@@ -301,7 +301,7 @@
       
         <!--hail-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'hail'"
+            version="1.1" ng-show="weather.currently.icon == 'hail'"
             id="cloudHailAlt"
             class="climacon climacon_cloudHailAlt"
             viewBox="15 15 70 70">
@@ -341,7 +341,7 @@
         
         <!--fog-->
         <svg
-            version="1.1" ng-show="currentWeather.icon == 'fog'"
+            version="1.1" ng-show="weather.currently.icon == 'fog'"
             id="cloudFogAlt"
             class="climacon climacon_cloudFogAlt"
             viewBox="15 15 70 70">
