Stubbed out spot for quotes and setup interval.

--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -63,6 +63,7 @@
       
       <div id="center-column">
         <!--Quotes go here-->
+        {{quotes[currentQuote]}}
       </div>
     </div>
     <script src="/bower_components/angular/angular.js"></script>
