--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -41,8 +41,9 @@
       
       <div id="right-column">
         <div id="date-information">
-          <p id="current-date">{{currentDay}}</p>
+          <p id="current-greeting">{{greeting}}</p>
           <p id="current-time">{{currentTime}}</p>
+          <p id="current-date">{{currentDay}}</p>
         </div>
         
         <div id="google-calendar-container">
